# ChangeLog for dev-db/mongodb
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/mongodb/ChangeLog,v 1.124 2015/08/05 09:53:48 ultrabug Exp $

  05 Aug 2015; Ultrabug <ultrabug@gentoo.org> mongodb-3.0.5.ebuild:
  ebuild cleanup and boost version dep fix

*mongodb-3.0.5 (04 Aug 2015)

  04 Aug 2015; Ultrabug <ultrabug@gentoo.org> +mongodb-3.0.5.ebuild:
  version bump, 3.x shouldn't use system tcmalloc, fix #556548

  03 Aug 2015; Ultrabug <ultrabug@gentoo.org> mongodb-2.6.10.ebuild,
  +files/mongodb-2.6.10-fix-boost-1.57.patch:
  fix #556272 build with boost-1.57 thx to Uros

*mongodb-3.0.4 (16 Jun 2015)

  16 Jun 2015; Ultrabug <ultrabug@gentoo.org> -mongodb-3.0.3.ebuild,
  +mongodb-3.0.4.ebuild:
  version bump, drop old

  27 May 2015; Ultrabug <ultrabug@gentoo.org> mongodb-2.6.10.ebuild,
  mongodb-3.0.3.ebuild:
  bump pcre version dep

*mongodb-2.6.10 (27 May 2015)

  27 May 2015; Ultrabug <ultrabug@gentoo.org> +mongodb-2.6.10.ebuild,
  mongodb-3.0.3.ebuild:
  version bump fix #550350, fix 3.0 test dep #546346

*mongodb-3.0.3 (13 May 2015)

  13 May 2015; Ultrabug <ultrabug@gentoo.org> -mongodb-3.0.2.ebuild,
  +mongodb-3.0.3.ebuild:
  version bump, drop old

*mongodb-2.4.14 (30 Apr 2015)

  30 Apr 2015; Ultrabug <ultrabug@gentoo.org> +mongodb-2.4.14.ebuild:
  version bump

*mongodb-3.0.2 (09 Apr 2015)

  09 Apr 2015; Ultrabug <ultrabug@gentoo.org> -mongodb-3.0.1.ebuild,
  +mongodb-3.0.2.ebuild:
  version bump, drop old

  29 Mar 2015; Ultrabug <ultrabug@gentoo.org> -mongodb-2.4.6-r2.ebuild,
  -mongodb-2.6.7.ebuild:
  drop vulnerable wrt #542880

  29 Mar 2015; Agostino Sarubbo <ago@gentoo.org> mongodb-2.4.13.ebuild,
  mongodb-2.6.8.ebuild:
  Stable for x86, wrt bug #542880

  26 Mar 2015; Ultrabug <ultrabug@gentoo.org> mongodb-3.0.1.ebuild:
  fix tests #543760 thx to Tomas Mozes

*mongodb-2.6.9 (24 Mar 2015)

  24 Mar 2015; Ultrabug <ultrabug@gentoo.org> +mongodb-2.6.9.ebuild:
  version bump
