@@ -11,4 +11,4 @@ RDEPEND=app-arch/snappy >=dev-cpp/yaml-cpp-0.5.1 >=dev-libs/boost-1.50[threads(+
 SLOT=0
 SRC_URI=http://downloads.mongodb.org/src/mongodb-src-r2.6.8.tar.gz mms-agent? ( http://dev.gentoo.org/~ultrabug/20140409-mms-monitoring-agent.zip )
 _eclasses_=check-reqs	a7f404bfb16e0a996700c5d3ac4edad3	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	multilib	62927b3db3a589b0806255f3a002d5d3	pax-utils	dfe060cb70d89757fde5c1ff8405e950	scons-utils	988e24b9e2e4642189b4e97c03e5ae71	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	42408102d713fbad60ca21349865edb4	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=885469285c13edf9cc9db334685a6c50
+_md5_=d963b7c1b12533f7c765c57b859ecf43
