@@ -1,5 +1,5 @@
 ####################################################################
-# $Header: /var/cvsroot/gentoo-x86/profiles/package.mask,v 1.16703 2015/08/05 02:46:43 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/package.mask,v 1.16704 2015/08/07 14:20:05 polynomial-c Exp $
 #
 # When you add an entry to the top of this file, add your name, the date, and
 # an explanation of why something is getting masked. Please be extremely
@@ -29,6 +29,12 @@
 ## app-misc/some-package
 
 #--- END OF EXAMPLES ---
+
+# Lars Wendler <polynomial-c@gentoo.org> (07 Aug 2015)
+# Masked due to build system problems (bug #556920)
+=sys-libs/tdb-1.3.7
+#depends on >=sys-libs/tdb-1.3.7
+=sys-libs/ldb-1.1.21
 
 # Matthew Thode <prometheanfire@gentoo.org> (04 Aug 2015)
 # removing old and never working horizon Bug #556710
