@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.10228 2015/08/06 12:04:26 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.10229 2015/08/07 14:20:05 polynomial-c Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  07 Aug 2015; Lars Wendler <polynomial-c@gentoo.org> package.mask:
+  Masked =sys-libs/tdb-1.3.7 due to build system problems (bug #556920).
 
   06 Aug 2015; Michał Górny <mgorny@gentoo.org> desc/linguas.desc:
   Add Paraguayan (Guarani) locale for LibreOffice.
